Upgrade front-end

--- a/src/web/templates/main.html
+++ b/src/web/templates/main.html
@@ -4,102 +4,77 @@
 <html>
 <head>
     <title>Contract Addresses</title>
-    <style>
-        /* Add your CSS styles here */
-        .pagination {
-            display: flex;
-            list-style: none;
-            padding: 0;
-        }
-
-        .pagination a {
-            text-decoration: none;
-            padding: 8px 16px;
-            border: 1px solid #ddd;
-            color: #007BFF;
-        }
-
-        .pagination a.active {
-            background-color: #007BFF;
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" href={{url_for('static', filename='css/style.css')}}>
 </head>
 <body>
-    <h1>Contract Addresses</h1>
-    
-    <!-- 네트워크 필터링 -->
-    <label for="network-filter">Filter by Network:</label>
-    <select id="network-filter">
-        <option value="all">All</option>
-        <option value="etherscan.io">etherscan.io</option>
-        <option value="bscscan.com">bscscan.com</option>
-        <option value="arbiscan.io">arbiscan.io</option>
-    </select>
-    
-    <table>
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>Network</th>
-                <th>Address</th>
-                <th>Contract_name</th>
-            </tr>
-        </thead>
-        <tbody id="contract-rows">
-            {% for row_number, row in rows_with_number %}
-            <tr class="{{ row['network'] }}">
-                <td>{{ row_number }}</td>
-                <td>{{ row['network'] }}</td>
-                <td>{{ row['address'] }}</td>
-                <td>{{ row['contract_name'] }}</td>
-            </tr>
-            {% endfor %}
-        </tbody>        
-    </table>
-
-    <div class="pagination">
-        {% for page in range(1, total_pages + 1) %}
-            <a href="?page={{ page }}" {% if page == current_page %}class="active"{% endif %}>{{ page }}</a>
-        {% endfor %}
+    <div class="App">
+        <div class="App-header">
+            <div class="centered-container">
+                <div class="ant-row ant-row-middle ant-row-space-between" style="margin-left: -16px;margin-right: -16px;row-gap: 32px;">
+                    <div class="App-header-text-block ant-col ant-col-lg-25" style="padding-left: 16px; padding-right: 16px;">
+                        <div class="Header_title">
+                            <h1>Ethereum 스마트 컨트랙트 주소</h1>
+                        </div>
+                        <div>
+                            <p>
+                                조사한 Ethereum 스마트 컨트랙트들을 주소별로 정리한 페이지입니다.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="ant-col ant-col-lg-9" style="padding-left: 16px; padding-right: 16px;">
+                        <div class="Header-img">
+                            <img src="{{url_for('static', filename="img/ecosystem-ethereum.avif")}}" alt="product illustration" style="color: transparent; width: 100%; height: auto;">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> 
+        <div class="App-body">
+            <div class="ant-col ant-row-middle centered-container">
+                <div class="ant-row ant-row-middle centered-container selection-border">
+                    <div class="network-filter-block ant-row-middle">
+                        <label for="network-filter">Filter by Network:  </label>
+                        <select id="network-filter">
+                            <option value="all">All</option>
+                            <option value="etherscan.io">etherscan.io</option>
+                            <option value="bscscan.com">bscscan.com</option>
+                            <option value="arbiscan.io">arbiscan.io</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="ant-row ant-row-middle centered-container table-border">
+                    <div class="ant-table">
+                        <table>
+                            <colgroup></colgroup>
+                            <thead class="ant-table-thead">
+                                <tr>
+                                    <th class="ant-table-cell">#</th>
+                                    <th class="ant-table-cell">Network</th>
+                                    <th class="ant-table-cell">Address</th>
+                                    <th class="ant-table-cell">Contract_name</th>
+                                </tr>
+                            </thead>
+                            <tbody id="contract-rows">
+                                {% for row_number, row in rows_with_number %}
+                                <tr class="{{ row['network'] }} ant-table-row">
+                                    <td class="ant-table-cell">{{ row_number }}</td>
+                                    <td class="ant-table-cell">{{ row['network'] }}</td>
+                                    <td class="ant-table-cell">{{ row['address'] }}</td>
+                                    <td class="ant-table-cell">{{ row['contract_name'] }}</td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>        
+                        </table>
+                    </div>
+                </div>
+            </div>
+            <div class="pagination ant-row ant-row-middle centered-container">
+                {% for page in range(1, total_pages + 1) %}
+                    <a href="?page={{ page }}" {% if page == current_page %} class="active" {% elif page < (current_page - 5) %} class="hidden" {% elif page > (current_page + 5) %} class="hidden" {% endif %}>{{ page }}</a>
+                {% endfor %}
+            </div>
+        </div>
     </div>
-    
-    <script>
-        const networkFilter = document.getElementById('network-filter');
-        const rows = document.querySelectorAll('tr');
-        const contractRows = document.getElementById('contract-rows');
-        const rowsPerPage = 20;
-
-        function showRows(startIndex, endIndex) {
-            rows.forEach((row, index) => {
-                if (index >= startIndex && index < endIndex) {
-                    row.style.display = '';
-                } else {
-                    row.style.display = 'none';
-                }
-            });
-        }
-
-        function showPage(page) {
-            const startIndex = (page - 1) * rowsPerPage;
-            const endIndex = startIndex + rowsPerPage;
-            showRows(startIndex, endIndex);
-        }
-
-        networkFilter.addEventListener('change', function () {
-            const selectedNetwork = networkFilter.value;
-
-            rows.forEach(row => {
-                if (selectedNetwork === 'all' || row.classList.contains(selectedNetwork)) {
-                    row.style.display = '';
-                } else {
-                    row.style.display = 'none';
-                }
-            });
-        });
-
-        // Initially show the first page
-        showPage(1);
-    </script>
+    <!-- <script src="{{url_for('static', filename='js/pagination.js')}}"></script> -->
 </body>
 </html>
