--- a/src/web/templates/main.html
+++ b/src/web/templates/main.html
@@ -75,6 +75,6 @@
             </div>
         </div>
     </div>
-    <!-- <script src="{{url_for('static', filename='js/pagination.js')}}"></script> -->
+    <script src="{{url_for('static', filename='js/pagination.js')}}"></script>
 </body>
 </html>
