--- a/src/web/static/css/style.css
+++ b/src/web/static/css/style.css
@@ -1,5 +1,11 @@
 /* Add your CSS styles here */
 
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Inter var, sans-serif;
+}
+
 .App {
     text-align: center;
     display: flex;
@@ -25,7 +31,7 @@
 .centered-container {
     max-width: 1312px;
     margin: 0 auto;
-    width: calc(100% - 32px);
+    width: calc(100% - 40px);
 }
 
 .pagination {
@@ -33,6 +39,7 @@
     list-style: none;
     padding: 0;
     border: 1px solid #e3e3e4;
+    border-radius: 2px;
     width: 100%;
     padding-left: 24px;
     padding-right: 24px;
@@ -128,25 +135,21 @@ img {
     align-items: center;
 }
 
-.selection-border {
-    border: 1px solid #e3e3e4;
-    border-radius: 12px;
-    width: 100%;
-    padding-left: 24px;
-    padding-right: 24px;
+.filter-border {
+    padding: 1rem;
+    justify-content: center;
+    gap: 1rem;
 }
 
 .table-border {
     padding: 24px;
     border: 1px solid #e3e3e4;
     border-radius: 12px;
-    width: 100%;
 }
 
 .network-filter-block {
     display: flex;
     flex-direction: row;
-    width: 100%;
     height: 50px;
 }
 
@@ -204,4 +207,28 @@ tr {
 
 .hidden {
     display: none;
+}
+
+.p-2 {
+    padding: 0.5rem;
+}
+
+input, button, select, textarea {
+    font-family: inherit;
+    font-size: 100%;
+    font-weight: inherit;
+    line-height: inherit;
+    color: inherit;
+    margin: 0;
+    width: 200px;
+}
+
+.px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+}
+
+.py-4 {
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
