--- a/src/web/templates/main.html
+++ b/src/web/templates/main.html
@@ -5,6 +5,8 @@
 <head>
     <title>Contract Addresses</title>
     <link rel="stylesheet" href={{url_for('static', filename='css/style.css')}}>
+    <link rel="icon" href={{url_for('static', filename='img/favicon.png')}}>
+    <link rel="apple-touch-icon" href={{url_for('static', filename='img/apple-touch-icon.png')}}>
 </head>
 <body>
     <div class="App">
