--- a/src/web/templates/template.html
+++ b/src/web/templates/template.html
@@ -61,6 +61,13 @@
                     <span>Tables</span></a>
             </li>
 
+            <!-- Nav Item - Cards -->
+            <li class="nav-item">
+                <a class="nav-link" href="/cards">
+                    <i class="fas fa-fw fa-table"></i>
+                    <span>Cards</span></a>
+            </li>
+
             <!-- Divider -->
             <hr class="sidebar-divider">
 
@@ -73,14 +80,14 @@
             <li class="nav-item">
                 <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
                     aria-expanded="true" aria-controls="collapseTwo">
-                    <i class="fas fa-fw fa-cog"></i>
-                    <span>Components</span>
+                    <i class="fas fa-fw fa-wrench"></i>
+                    <span>Accounts</span>
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Custom Components:</h6>
                         <a class="collapse-item" href="admin">Admin</a>
-                        <a class="collapse-item" href="cards">Cards</a>
+                        <a class="collapse-item" href="users">Users</a>
                     </div>
                 </div>
             </li>
