add user sendind and receiving

--- a/src/web/templates/template.html
+++ b/src/web/templates/template.html
@@ -85,9 +85,10 @@
                 </a>
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <h6 class="collapse-header">Custom Components:</h6>
+                        <h6 class="collapse-header">Accounts list:</h6>
                         <a class="collapse-item" href="admin">Admin</a>
-                        <a class="collapse-item" href="users">Users</a>
+                        <a class="collapse-item" href="users-receiving">Users receiving</a>
+                        <a class="collapse-item" href="users-sending">Users sending</a>
                     </div>
                 </div>
             </li>
