--- a/src/web/templates/users-sending.html
+++ b/src/web/templates/users-sending.html
@@ -5,7 +5,7 @@
 <div class="container-fluid">
 
     <!-- Page Heading -->
-    <h1 class="h3 mb-2 text-gray-800">Users</h1>
+    <h1 class="h3 mb-2 text-gray-800">Users sending</h1>
     <p class="mb-4">Please upload the result of fuzzing.</p>
     <form method="post" action="/insertion" class="user">
         <div class="form-group">
