--- a/src/web/templates/tables.html
+++ b/src/web/templates/tables.html
@@ -37,6 +37,7 @@
                             <th>Network</th>
                             <th>Address</th>
                             <th>Contract name</th>
+                            <th>similar</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -46,6 +47,7 @@
                             <td>{{ row['network'] }}</td>
                             <td>{{ row['address'] }}</td>
                             <td>{{ row['contract_name'] }}</td>
+                            <td>{{ row['similar'] }}</td>
                         </tr>
                         {% endfor %}
                     </tbody>
